# juniper-sqlx-sandbox

./: .env.sample  Cargo.toml  README.md  schema.sql
migrations/: 20230202120336_create-actor.down.sql  20230202120336_create-actor.up.sql  20230202120336_create-actors.up.sql  20230203102156_create-posts.down.sql  20230203102156_create-posts.up.sql
src/: context.rs  main.rs  schema.rs
src/schema/: actor.rs  mod.rs  post.rs  role.rs  root.rs
