[package]
name = "juniper-sqlx-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
juniper = "0.15.11"
juniper_relay_connection = "0.1.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.25.0", features = ["full"] }
